# hypeproof_kids_edu

./: .gitignore  .mcp.json  2026-04-12-mvp-dev-plan.md  CLAUDE.md  E2E_TEST_GUIDE.md  README.md  build_teams.md  docker-compose.override.yml  docker-compose.yml  fly.toml  obsidian_settings.md  product-requirements-gap-plan.md  wiki-lint-backlog.md
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: architect.md  implementer.md  reviewer.md  tester.md
.claude/rules/: uv.md
.next/: trace  trace-build
kids_edu_vault/: CLAUDE.md
kids_edu_vault/.obsidian/: graph.json
kids_edu_vault/.raw/: .manifest.json  2026-04-12-jay-decision.md  2026-04-19-curriculum-v0.3.html  2026-04-20-meeting-briefing.md
kids_edu_vault/_templates/: intel.md  (+9 more)
meeting_notes/: 2026-02-09-weekly-on-hyperproof.md  2026-04-21-hospital-inquiry-draft.md  2026-05-12.md  2026-05-14.md  environ_check.md  okr_q2.md
src/backend/: .dockerignore  .env.example  Dockerfile  claude_runner.py  game_engine.py  game_template.py  genai_runner.py  load_test.py  main.py  pyproject.toml  qr_generator.py  storage.py  svg_sanitizer.py  ws_handler.py
src/backend/app/: auth.py  checkpointer.py  config.py  llm.py
src/backend/app/graph/: edges.py  graph.py  nodes.py  state.py
src/backend/personas/: TUTOR.md
src/backend/tests/: conftest.py  e2e_curriculum.py  e2e_full.py  edge_test.py  qa_checklist.py  run_e2e_inline.py  test_auth.py  test_auth_session_game.py  test_card_node.py  test_claude_runner.py  test_edit_loop.py  test_graph_routing.py  test_spec_node.py  test_summarize_turn.py  test_ws_handler.py
(+215 files in other folders)
