[project]
name = "kids-edu-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "httpx>=0.28.1",
    "qrcode>=8.2",
    "langchain-google-genai>=2.1",
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "bcrypt>=4.0",
    "pydantic-settings>=2.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langfuse>=2.0,<3.0",
    "langchain>=0.2,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-anyio>=0.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

